HTML frame added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,347 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div> Header </div>
-    <div> Main </div>
-    <div> Footer </div>
+    <header>
+        <section>
+            <img src="images/color_blur_header.png" />
+            <img src="images/logo.svg" alt="logo of Hounter" />
+            <span>Hounter</span>
+            <h1>Find The Place To Live Your Dreams Easily Here</h1>
+            <p>Everything you need about finding your place to live will be here, where it will be easier for you</p>
+            <div>
+                <img src="images/fluent_location_icon.svg" /><input type="text"><button>Search <img
+                        src="images/Arow_button_header.png" /></button>
+            </div>
+            <h5> Our partnership</h5>
+            <div>
+                <img src="images/traveloka_logo.svg" alt="Traveloka logo" />
+                <img src="images/ticket_com_logo.svg" alt="Ticket com logo" />
+                <img src="images/airbnb_logo.svg" alt="Airbnb logo" />
+                <img src="images/trip_advisor_logo.svg" alt="Trip advisor logo" />
+
+            </div>
+        </section>
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="#home">About us</a></li>
+                    <li><a href="#about">Article</a></li>
+                    <li><a href="#services">Property</a></li>
+                    <li><a href="#contact">Sign up</a></li>
+                </ul>
+            </nav>
+            <img src="images/side_image_header.png" alt="Image with beautifull house" />
+        </section>
+    </header>
+    <main>
+        <section>
+            <img src="images/dash_section_divider.svg" />Our Recommendation
+            <nav>
+                <div>
+                    <h2>Featured House</h2>
+                </div>
+                <div>
+                    <nav>
+                        <ul>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#about">Villa</a></li>
+                            <li><a href="#services">Apartment</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div>
+                    <button><img src="images/eva_arrow-ios-forward-fill.png" /></button>
+                    <button><img src="images/eva_arrow-ios-forward-fill_white.png" /></button>
+                </div>
+            </nav>
+            <article>
+                <div>
+                    <div>
+                        <img src="images/white_house_palms.png" alt="White house with palms" />
+                        <h3>Roselands House</h3>
+                        <p>$ 35.000.000</p>
+                        <div>
+                            <img src="images/logo_person_1.svg" />
+                            <h4>Dianne Russell</h4>
+                            <p>Manchester, Kentucky</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="images/white_house_black_roof.png" alt="White house with black roof" />
+                        <h3>Woodlandside</h3>
+                        <p>$ 20.000.000</p>
+                        <div>
+                            <img src="images/logo_person_2.svg" />
+                            <h4>Robert Fox</h4>
+                            <p>Dr. San Jose, South Dakota</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="images/white_appartments.png" alt="White appartments" />
+                        <h3>The Old Lighthouse</h4>
+                            <p>$ 44.000.000</p>
+                            <div>
+                                <img src="images/logo_person_3.svg" />
+                                <h4>Ronald Richards</h4>
+                                <p>Santa Ana, Illinois</p>
+                            </div>
+                    </div>
+                    <div>
+                        <img src="images/white_old_house.png" />
+                        <h3>Cosmo's House</h3>
+                        <p>$ 22.000.000</p>
+                        <div>
+                            <img src="images/logo_person_4.svg" />
+                            <h4>Jenny Wilson</h4>
+                            <p>Preston Rd. Inglewood, Maine 98380</p>
+                        </div>
+                    </div>
+
+                </div>
+            </article>
+        </section>
+
+
+        <section>
+            <img src="images/blur_section_3_1.svg" />
+            <img src="images/blur_section_3_2.svg" />
+
+            <article>
+                <img src="images/dash_section_divider.svg" />Ready to Sell!
+                <h2>Let’s tour and see our house!</h2>
+                <p>Houses recommended by our partners that have been curated to become the home of your dreams!</p>
+                <h4>House Detail</h4>
+                <div>
+                    <div>
+                        <img src="images/bed.svg" />
+                        <p>4 Bedrooms</p>
+                    </div>
+                    <div>
+                        <img src="images/car.svg" />
+                        <p>1 Carport</p>
+                    </div>
+                    <div>
+                        <img src="images/bath.svg" />
+                        <p>2 Bathrooms</p>
+                    </div>
+                    <div>
+                        <img src="images/floors.svg" />
+                        <p>2 Floors</p>
+                    </div>
+                </div>
+                <hr>
+                <div>
+                    <div>
+                        <img src="images/logo_big.svg" />
+                        <h4>Dianne Russell</h4>
+                        <p>Manager Director</p>
+                    </div>
+                    <div>
+                        <button><img src="images/phone_logo.svg" />Contact Now</button>
+                    </div>
+                </div>
+            </article>
+            <aside>
+                <video width="320" height="240" controls>
+                    <source src="videos/video_house.mp4" type="video/mp4" alt="Video with many houses">
+                </video>
+
+                <img src="images/images_video_1.png" />
+                <img src="images/images_video_2.png" />
+                <img src="images/images_video_3.png" />
+
+            </aside>
+        </section>
+        <section>
+            <div>
+                <img src="images/dash_section_divider.svg" />See Our Review
+            </div>
+            <div>
+                <h2>What Our User Say About Us</h2>
+            </div>
+            <article>
+                <section>
+                    <img src="images/image_house_red_roof.png" />
+                    <div>
+                        <p>I was finally able to sell my house quickly through Hounter by immediately setting me up with
+                            people who wanted my house. I also do not get a discount from the sale of my house. Awesome!
+                        </p>
+                        <img src="images/star.svg" />
+                        <h4>4.3</h4>
+                    </div>
+                </section>
+                <section>
+                    <img src="images/image_house_pool.png" />
+                    <div>
+                        <h3>Best! I got the house I wanted through Hounter</h3>
+                        <p>Through this website I can get a house with the type and specifications I want very easily,
+                            without a complicated process to be able to find information on the house we want.</p>
+                        <div>
+                            <img src="images/logo_person_1.svg" />
+                            <h4>Dianne Russell</h4>
+                            <p>Manchester, Kentucky</p>
+                        </div>
+                        <div>
+                            <img src="images/star.svg" />
+                            <h4>4.6</h4>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <img src="images/image_house_tree.png" />
+                    <div>
+                        <h3>Best! I got the house I wanted through Hounter</h3>
+                        <p>Through this website I can get a house with the type and specifications I want very easily,
+                            without a complicated process to be able to find information on the house we want.</p>
+                        <div>
+                            <img src="images/logo_person_5.svg" />
+                            <h4>Esther Howard</h4>
+                            <p>Head of Marketing</p>
+                        </div>
+                    </div>
+                </section>
+            </article>
+            <div>
+                <img src="images/gray_point.svg" />
+                <img src="images/filled_point.svg" />
+                <img src="images/gray_point.svg" />
+            </div>
+        </section>
+
+        <section>
+            <img src="images/blur_section_4_1.svg" />
+            <img src="images/blur_section_4_2.svg" />
+
+            <img src="images/dash_section_divider.svg" />See tips and trick from our partnership
+            <h2>Find out more about selling and buying homes</h2>
+            <button>More Artikel</button>
+            <article>
+                <section>
+                    <img src="images/house_image_6_1.png" alt="House interior" />
+                    <div>
+                        <div><img src="images/logo_6_1.svg" />
+                            <h5>Dianne Russell</h5>
+                        </div>
+                        <h3>The things we need to check when we want to buy a house</h3>
+                        <div>
+                            <img src="images/time.svg" />
+                            <time>4 min read | 25 Apr 2021</time>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <img src="images/house_image_block_6_1.png" alt="Small old house" />
+                    <div>
+                        <div><img src="images/logo_6_2.svg" />
+                            <h5>Courtney Henry</h5>
+                        </div>
+                        <h3>7 Ways to distinguish the quality of the house we want to buy</h3>
+                        <div>
+                            <img src="images/time.svg" />
+                            <time>6 min read | 24 Apr 2021</time>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <img src="images/house_image_block_6_2.png" alt="Fancy villa" />
+                    <div>
+                        <div><img src="images/logo_6_3.svg" />
+                            <h5>Darlene Robertson</h5>
+                        </div>
+                        <h3>The best way to know the quality of the house we want to buy</h3>
+                        <div>
+                            <img src="images/time.svg" />
+                            <time>2 min read | 24 Apr 2021</time>
+                        </div>
+                    </div>
+                </section>
+
+            </article>
+            <aside>
+                <img src="images/house_image_block_6_big.png" alt="Fancy villa with pool" />
+                <div>
+                    <div><img src="images/logo_6_4.svg" />
+                        <h5>Cameron Williamson</h5>
+                    </div>
+                    <h3>12 Things to know before buying a house</h3>
+                    <p>Want to buy a house but are unsure about what we should know, here I will try to explain what we
+                        should know and check when we want to buy a house</p>
+                    <div>
+                        <img src="images/time.svg" />
+                        <time>8 min read | 25 Apr 2021</time>
+                    </div>
+                </div>
+            </aside>
+        </section>
+        <section>
+            <div>
+                <img src="images/background_7.png"/>
+                <img src="images/image_background_1.svg"/>
+                <img src="images/image_background_2.svg"/>
+                <img src="images/image_background_3.svg"/>
+                <img src="images/image_background_4.svg"/>
+                <img src="images/image_background_5.svg"/>
+                <img src="images/image_background_6.svg"/>
+                <img src="images/image_background_7.svg"/>
+                <img src="images/image_background_8.svg"/>
+
+
+                <h2>Subscribe For More Info and update from Hounter</h2>
+                <div>
+                    <img src="images/mail_logo.svg"/>
+                    <input type="text"/>
+                    <button>Subsribe Now</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <img src="images/blur_footer_1.svg" />
+        <img src="images/blur_footer_1_1.svg" />
+
+        <section>
+            <img src="images/logo.svg" alt="logo of Hounter" />
+            <span>Hounter</span>
+            <p>We provide information about properties such as houses, villas and apartments to help people find their
+                dream home</p>
+            <div>
+                <img src="images/logo_facebook.svg" />
+                <img src="images/logo_twitter.svg" />
+                <img src="images/logo_instagram.svg" />
+            </div>
+        </section>
+        <aside>
+            <div>
+                <h3>Property</h3>
+                <span>House</span>
+                <span>Apartment</span>
+                <span>Villa</span>
+            </div>
+            <div>
+                <h3>Article</h3>
+                <span>New Article</span>
+                <span>Popular Article</span>
+                <span>Most Read</span>
+                <span>Tips & Tricks</span>
+
+            </div>
+            <div>
+                <h3>Contact</h3>
+                <span>2464 Royal Ln. Mesa, New Jersey 45463</span>
+                <span>(671) 555-0110</span>
+                <span>info@hounter.com</span>
+            </div>
+        </aside>
+    </footer>
 
 </body>
+
 </html>
