Added image decomposition

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             </div>
         </section>
-        <section>
+        <aside>
             <nav>
                 <ul>
                     <li><a href="#home">About us</a></li>
@@ -38,8 +38,39 @@
                     <li><a href="#contact">Sign up</a></li>
                 </ul>
             </nav>
-            <img src="images/side_image_header.png" alt="Image with beautifull house" />
-        </section>
+            <div>
+                <img src="images/image_main_header.png" alt="Image with beautifull house" />
+                <div>
+                    <article>
+                        <div>
+                            <img src="images/logo_block_1.svg" />
+                        </div>
+                        <div>
+                            <h4>1K+ People</h4>
+                            <p>Successfully Getting Home</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <img src="images/logo_block_2.svg" />
+                        </div>
+                        <div>
+                            <h4>56 Houses</h4>
+                            <p>Sold Monthly</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div>
+                            <img src="images/logo_block_3.svg" />
+                        </div>
+                        <div>
+                            <h4>4K+</h4>
+                            <p>People Looking for New Homes</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </aside>
     </header>
     <main>
         <section>
@@ -65,7 +96,12 @@
             <article>
                 <div>
                     <div>
-                        <img src="images/white_house_palms.png" alt="White house with palms" />
+                        <div>
+                            <img src="images/white_house_palms.png" alt="White house with palms" />
+                            <div>
+                                <img src="images/popular_label.svg"/>
+                            </div>
+                        </div>
                         <h3>Roselands House</h3>
                         <p>$ 35.000.000</p>
                         <div>
@@ -85,7 +121,13 @@
                         </div>
                     </div>
                     <div>
-                        <img src="images/white_appartments.png" alt="White appartments" />
+                        <div>
+                            <img src="images/white_appartments.png" alt="White appartments" />
+                            <div>
+                                <img src="images/Best_deals_label.svg"/>
+                            </div>
+                        </div>
+                        
                         <h3>The Old Lighthouse</h4>
                             <p>$ 44.000.000</p>
                             <div>
@@ -95,7 +137,13 @@
                             </div>
                     </div>
                     <div>
-                        <img src="images/white_old_house.png" />
+                        <div>
+                            <img src="images/white_old_house.png" alt="White old house"/>
+                            <div>
+                                <img src="images/popular_label.svg"/>
+                            </div>
+                        </div>
+                       
                         <h3>Cosmo's House</h3>
                         <p>$ 22.000.000</p>
                         <div>
@@ -283,21 +331,21 @@
         </section>
         <section>
             <div>
-                <img src="images/background_7.png"/>
-                <img src="images/image_background_1.svg"/>
-                <img src="images/image_background_2.svg"/>
-                <img src="images/image_background_3.svg"/>
-                <img src="images/image_background_4.svg"/>
-                <img src="images/image_background_5.svg"/>
-                <img src="images/image_background_6.svg"/>
-                <img src="images/image_background_7.svg"/>
-                <img src="images/image_background_8.svg"/>
+                <img src="images/background_7.png" />
+                <img src="images/image_background_1.svg" />
+                <img src="images/image_background_2.svg" />
+                <img src="images/image_background_3.svg" />
+                <img src="images/image_background_4.svg" />
+                <img src="images/image_background_5.svg" />
+                <img src="images/image_background_6.svg" />
+                <img src="images/image_background_7.svg" />
+                <img src="images/image_background_8.svg" />
 
 
                 <h2>Subscribe For More Info and update from Hounter</h2>
                 <div>
-                    <img src="images/mail_logo.svg"/>
-                    <input type="text"/>
+                    <img src="images/mail_logo.svg" />
+                    <input type="text" />
                     <button>Subsribe Now</button>
                 </div>
             </div>
