Added sections with house cards

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <img class="blur_video_2" src="images/blur_section_3_2.svg" />
             <div class="spacer"></div>
             <div class="content_section_sell">
-                <article>
+                <article class="main_aticle">
 
                     <div class="page_separator_block">
                         <img src="images/dash_section_divider.svg" /><span class="page_separator_txt">Ready to Sell!
@@ -252,60 +252,70 @@
                     <video class="video_box" width="320" height="240" controls>
                         <source src="videos/video_house.mp4" type="video/mp4" alt="Video with many houses">
                     </video>
-                    <div class = "images_video_overlap">
+                    <div class="images_video_overlap">
                         <img src="images/images_video_1.png" />
                         <img src="images/images_video_2.png" />
                         <img src="images/images_video_3.png" />
                     </div>
                 </aside>
-                <div class = "spacer"></div>
+                <div class="spacer"></div>
             </div>
         </section>
         <section>
             <div class="center_section_separator">
-                <img src="images/dash_section_divider.svg" />See Our Review
+                <img src="images/dash_section_divider.svg" /> <span class="page_separator_txt">See Our Review</span>
             </div>
-            <div>
-                <h2>What Our User Say About Us</h2>
+            <div class="heading_images_wrapper">
+                <h2 class="heading_section">What Our User Say About Us</h2>
             </div>
-            <article>
-                <section>
-                    <img src="images/image_house_red_roof.png" />
-                    <div>
-                        <p>I was finally able to sell my house quickly through Hounter by immediately setting me up with
+            <article class="images_blocks_wrapper">
+                <section class="image_block_section_side">
+                    <img class="image_section_fit" src="images/image_house_red_roof.png" />
+                    <div class="image_block_description_left">
+                        <p class="house_card_description">I was finally able to sell my house quickly through Hounter by
+                            immediately setting me up with
                             people who wanted my house. I also do not get a discount from the sale of my house. Awesome!
                         </p>
-                        <img src="images/star.svg" />
-                        <h4>4.3</h4>
-                    </div>
-                </section>
-                <section>
-                    <img src="images/image_house_pool.png" />
-                    <div>
-                        <h3>Best! I got the house I wanted through Hounter</h3>
-                        <p>Through this website I can get a house with the type and specifications I want very easily,
-                            without a complicated process to be able to find information on the house we want.</p>
-                        <div>
-                            <img src="images/logo_person_1.svg" />
-                            <h4>Dianne Russell</h4>
-                            <p>Manchester, Kentucky</p>
-                        </div>
-                        <div>
+                        <div class="stars_image_block_left">
                             <img src="images/star.svg" />
-                            <h4>4.6</h4>
+                            <h4>4.3</h4>
                         </div>
                     </div>
                 </section>
-                <section>
-                    <img src="images/image_house_tree.png" />
-                    <div>
-                        <h3>Best! I got the house I wanted through Hounter</h3>
+                <div class="spacer_image_block"></div>
+                <section class="image_block_section_main">
+                    <img class="image_section_fit" src="images/image_house_pool.png" />
+                    <div class="image_block_description_center">
+                        <h3 class="house_card_header">Best! I got the house I wanted through Hounter</h3>
                         <p>Through this website I can get a house with the type and specifications I want very easily,
                             without a complicated process to be able to find information on the house we want.</p>
-                        <div>
-                            <img src="images/logo_person_5.svg" />
-                            <h4>Esther Howard</h4>
-                            <p>Head of Marketing</p>
+                        <div class="image_block_user_info_wrapper">
+
+                            <img src="images/logo_person_1.svg" />
+                            <div class = "position_name_wrapper">
+                                <h4>Dianne Russell</h4>
+                                <p>Manchester, Kentucky</p>
+                            </div>
+                            <div class = "stars_image_block">
+                                <img src="images/star.svg" />
+                                <h4>4.6</h4>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="spacer_image_block"></div>
+                <section class="image_block_section_side">
+                    <img class="image_section_fit" src="images/image_house_tree.png" />
+                    <div class="image_block_description_right">
+                        <h3 class="house_card_header">Best! I got the house I wanted through Hounter</h3>
+                        <p>Through this website I can get a house with the type and specifications I want very easily,
+                            without a complicated process to be able to find information on the house we want.</p>
+                        <div class="image_block_user_info_wrapper">
+                            <img class = "logo_user_card" src="images/logo_person_5.svg" />
+                            <div class = "position_name_wrapper">
+                                <h4>Esther Howard</h4>
+                                <p>Head of Marketing</p>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -328,7 +338,8 @@
                 <section>
                     <img src="images/house_image_6_1.png" alt="House interior" />
                     <div>
-                        <div><img src="images/logo_6_1.svg" />
+                        <div>
+                            <img src="images/logo_6_1.svg" />
                             <h5>Dianne Russell</h5>
                         </div>
                         <h3>The things we need to check when we want to buy a house</h3>
